--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@types/johnny-five": "^1.3.0",
     "@types/node": "^14.14.20",
     "typescript": "^4.1.3"
+  },
+  "volta": {
+    "node": "12.21.0"
   }
 }
